# ali_reg

./: README.md  makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 84d9fde7c54a_first_migration1.py
app/: config.py  database.py  main.py
app/registration/: enums.py  models.py
